--- a/about.html
+++ b/about.html
@@ -82,10 +82,10 @@
       <div class="container">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About Us</a>
+            <a class="nav-link active" href="#">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Find Us</a>
@@ -97,92 +97,45 @@
             <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link" href="/contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Navbar section end here -->
 
-  <!-- header slider  start -->
+      <!-- header slider  start -->
 
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/images/banner.png" alt="" />
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Loved By Locals Since 2013</h1>
-            <p>
-              Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-              Donec id elit non mi porta gravida at eget metus. Nullam id
-              dolor id nibh ultricies vehicula ut id elit.
-            </p>
-            <p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a>
-            </p>
-          </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/images/banner.png" alt="" />
+                <div class="container menu">
+                    <div class="carousel-caption pb-5">
+                        <h1>About Us</h1>
+
+                    </div>
+                </div>
+            </div>
+
+
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/banner-02.png" alt="" />
 
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>
-              Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-              Donec id elit non mi porta gravida at eget metus. Nullam id
-              dolor id nibh ultricies vehicula ut id elit.
-            </p>
-            <p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/banner-03.png" alt="" />
-
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>One more for good measure.</h1>
-            <p>
-              Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-              Donec id elit non mi porta gravida at eget metus. Nullam id
-              dolor id nibh ultricies vehicula ut id elit.
-            </p>
-            <p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a>
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
 
-  <!-- header slider  end here -->
-
-  <!-- About us start here -->
+    <!-- header slider  end here -->
+ <!-- About us start here -->
 
   <div class="container" data-aos="fade-up" data-aos-duration="700">
     <div class="about_section">
       <div class="row">
+         <div class="col-lg-5 col-md-5 col-sm-4">
+          <div class="about_img">
+            <img src="assets/images/about-pic.png" alt="" />
+          </div>
+        </div>
         <div class="col-lg-7 col-md-7 col-sm-8">
           <div class="separator">
             <h3>Benvenuti al</h3>
@@ -212,153 +165,14 @@
             summer dine in and takeaway evenings.
           </p>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-4">
-          <div class="about_img">
-            <img src="assets/images/about-pic.png" alt="" />
-          </div>
-        </div>
+       
       </div>
       <!-- About us end here -->
     </div>
   </div>
-  <div class="bg_gray">
-    <div class="container">
-      <div class="menu_section">
-        <div class="our_menu">
-          <div class="menu_heading">
-            <h1>Our Menus</h1>
-          </div>
-          <div class="pb-5">
-            <div class="row">
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <div class="left_menu">
-                  <img src="assets/images/antipasti.png" alt="" srcset="" class="left_menu_img" />
-                  <div class="menu_footer1">
-                    <div class="row">
-                      <div class="col-10">
-                        <p class="title">Antipasti e Insalate</p>
-                      </div>
-                      <div class="col-2">
-                        <div class="arrow_div">
-                          <img src="assets/images/arrow1.png" class="arrow" alt="" />
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
 
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <div class="first_menu">
-                  <img src="assets/images/pasta.png" alt="" srcset="" />
-                  <div class="menu_footer">
-                    <div class="col-10">
-                      <p class="title">Pasta e Risotto</p>
-                    </div>
-                    <div class="col-2">
-                      <div class="arrow_div">
-                        <img src="assets/images/arrow1.png" class="arrow1" alt="" />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="second_menu">
-                  <img src="assets/images/secondi.png" alt="" srcset="" />
-                  <div class="menu_footer">
-                    <div class="col-10">
-                      <p class="title">Secondi Piatti</p>
-                    </div>
-                    <div class="col-2">
-                      <div class="arrow_div">
-                        <img src="assets/images/arrow1.png" class="arrow1" alt="" />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
 
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <div class="first_menu">
-                  <img src="assets/images/pizza.png" alt="" srcset="" />
-                  <div class="menu_footer">
-                    <div class="col-10">
-                      <p class="title">Pizza</p>
-                    </div>
-                    <div class="col-2">
-                      <div class="arrow_div">
-                        <img src="assets/images/arrow1.png" class="arrow1" alt="" />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="second_menu">
-                  <img src="assets/images/dolci.png" alt="" srcset="" />
-                  <div class="menu_footer">
-                    <div class="col-10">
-                      <p class="title">Dolci</p>
-                    </div>
-                    <div class="col-2">
-                      <div class="arrow_div">
-                        <img src="assets/images/arrow1.png" class="arrow1" alt="" />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Contact us start here -->
-
-  <div class="container mt-3">
-    <div class="contact_form">
-      <h1 class="contact_heading text-center">Contact Us</h1>
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <img src="assets/images/contact.png" alt="" class="contact_img" />
-
-          <div class="form">
-            <div class="form-group">
-              <span><i class="fa fa-user" aria-hidden="true"></i> </span>
-
-              <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Name" />
-            </div>
-            <div class="form-group">
-              <span><i class="fa fa-envelope" aria-hidden="true"></i> </span>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email" />
-            </div>
-            <div class="form-group">
-              <span><i class="fa fa-phone" aria-hidden="true"></i> </span>
-              <input type="phoneNumber" class="form-control" id="phoneNumber" placeholder="Phone" />
-            </div>
-
-            <div class="form-group">
-              <span><i class="fa fa-pencil"></i> </span>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
-            </div>
-            <div class="text-center">
-              <button>Submit</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <div class="responsive-map">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13745.581063717123!2d75.95196518019654!3d30.53813470728428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391069a660696aef%3A0x3bc789e57615106b!2sChandigarh%2C%20Punjab%20148023!5e0!3m2!1sen!2sin!4v1652896457442!5m2!1sen!2sin"
-              style="border: 0" allowfullscreen="" loading="lazy" class="map_image"
-              referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Contact us end here -->
-
-  <!-- Testimonials start here  -->
+    <!-- Testimonials start here  -->
 
   <section>
     <div class="testimonials_section">
@@ -672,68 +486,8 @@
   </section>
   <!-- END OF TESTIMONIALS -->
 
-  <!-- Testimonials end here  -->
 
-  <!-- Reviews start here -->
-
-  <div class="top_review">
-    <img class="top_review_patti" src="assets/images/topreview-patti.png" alt="" srcset="" />
-    <div class="top_review_inner">
-      <div class="review_content">
-        <img src="assets/images/topreview-logo.png" alt="" srcset="" />
-        <a href="https://www.topreviews.co.nz/best-italian-restaurants-tauranga/" target="_blank">
-          https://www.topreviews.co.nz/best-italian-restaurants-tauranga/
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Reviews end here -->
-
-  <!-- Gallery start here  -->
-
-  <div class="gallery">
-    <div class="container">
-      <div class="gallery_heading">
-        <h1>Gallery</h1>
-      </div>
-
-      <div class="gallery_section">
-        <div class="row">
-          <div class="col-lg-3 col-md-3">
-            <img src="assets/images/pic-1.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3">
-            <img src="assets/images/pic-2.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3">
-            <img src="assets/images/pic-3.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3">
-            <img src="assets/images/pic-4.png" alt="" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-3 gallery_bottom_img">
-            <img src="assets/images/pic-5.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3 gallery_center_img">
-            <img src="assets/images/pic-6.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3 gallery_bottom_img">
-            <img src="assets/images/pic-7.png " alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3 gallery_center_img">
-            <img src="assets/images/pic-8.png" alt="" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Gallery end here  -->
-
-  <!-- Footer start -->
+    <!-- Footer start -->
 
   <div class="footer_section">
     <footer class="container">
@@ -855,6 +609,7 @@
 
     </footer>
   </div>
+
 
 
   <!-- Optional JavaScript -->
